# mcp-annual-report

./: .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  README_zh.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: build_images.yml
data/popmart-2023-ar/: page_0002.md  page_0003.md  page_0004.md  page_0007.md  page_0009.md  page_0010.md
data/popmart-2023e/: page_0001.md  page_0005.md  page_0006.md  page_0008.md
middleware/: auth.py
tools/: __init__.py  registry.py  report.py
